--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/poppins": "^5.2.7",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@mui/x-charts": "^8.12.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.9.0",
